# DAVE

./: .env.example  .gitignore  README.md  release.json
backend/: dave-backend.spec  desktop_backend.py  requirements-desktop.txt  requirements.txt  run_backend.py
backend/app/: config.py  main.py  versioning.py
backend/app/api/: analyzer_api.py  app_api.py  auth_routes.py  fileshare_routes.py  serial_api.py  snapshot_api.py
backend/app/auth/: dependencies.py  models.py  password.py  session.py
backend/app/db/: database.py  migrations.py
backend/app/parser/: models.py  sysmon_parser.py
backend/app/security/: filenames.py  upload_validation.py
backend/app/serial/: serial_worker.py
backend/app/services/: analyzer_service.py  fileshare_service.py  snapshot_store.py  version_service.py
backend/app/tools/: __init__.py  analyzer_tools.py  context.py  registry.py  serial_tools.py
backend/app/websocket/: ws_manager.py
backend/tests/: conftest.py  test_auth.py  test_fileshare.py  test_serial.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: DEPLOYMENT_PI.md  FILESHARE_MODULE.md  INTEGRATION_PLAN.md  SCALING_NOTES.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: ErrorBoundary.tsx  main.tsx
frontend/src/api/: auth.ts  download.ts  fileshare.ts  rest.ts  runtime.ts  status.ts  websocket.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/components/dashboard/: ClientsPanel.tsx  ConsolePanel.tsx  CpuChart.tsx  LogAnalysisPanel.tsx  MemoryChart.tsx  SnapshotReplayPanel.tsx  UpdateChecker.tsx
frontend/src/components/fileshare/: FileListTable.tsx  FileUploadPanel.tsx
frontend/src/components/layout/: AppShell.tsx  NavBar.tsx
frontend/src/pages/: Dashboard.tsx  FileSharePage.tsx  LoginPage.tsx
frontend/src/theme/: dashboard.ts
scripts/: start_lan.sh  start_pi_server.sh
tools/: README_log_event_detector.md  analyzer3.py  log_event_detector.py
