[package]
name = "dave-desktop"
version = "0.1.3"
description = "DAVE Lab Portal desktop shell"
authors = ["reviealnow"]
license = ""
repository = "https://github.com/reviealnow/DAVE"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# shell-open: lets the frontend open the GitHub Releases page in the system
#   browser (used by the UpdateChecker widget — see tauri.conf.json allowlist).
tauri = { version = "1", features = ["shell-open"] }

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
