[package]
name = "dave-desktop"
version = "0.1.3"
description = "DAVE Lab Portal desktop shell"
authors = ["reviealnow"]
license = ""
repository = "https://github.com/reviealnow/DAVE"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# shell-open          : open the GitHub Releases page in the system browser
#                       (UpdateChecker widget — see tauri.conf.json allowlist).
# shell-sidecar       : matches the shell.sidecar allowlist entry.
# process-command-api : spawn the bundled FastAPI backend sidecar from main.rs.
# dialog-save         : native "Save As" dialog for file/log downloads.
# fs-write-file       : write the downloaded bytes to the chosen path
#                       (browser <a download> is ignored in the webview).
# path-all            : path API (downloadDir/join) to default Save-As into Downloads.
tauri = { version = "1", features = ["shell-open", "shell-sidecar", "process-command-api", "dialog-save", "fs-write-file", "path-all"] }

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
